tests/ui/parser/doc-inside-trait-item.stderr
error[E0584]: found a documentation comment that doesn't document anything
  --> $DIR/doc-inside-trait-item.rs:3:5
   |
LL |     /// empty doc
   |     ^^^^^^^^^^^^^ this doc comment doesn't document anything
   |
   = help: doc comments must come before what they document, if a comment was intended use `//`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0584`.
